fix(style): make sure the header doesn't overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -191,3 +191,7 @@ button {
     width: 100% !important;
   }
 }
+
+.wv100 {
+  width: 100vw;
+}
